<resources>
    <!-- Permission Check-->
    <string name="app_name">ScreenTime</string>
    <string name="btn_permission">System Setting</string>

    <!-- Screen-Time Overview-->
    <string name="description_scrollview">This is an overview of the screentime</string>
    <string name="description_viewflipper">This view flips between apps and categories</string>
    <string name="description_app_icon">The icon of the app</string>
    <string name="description_arrow_right">An arrow pointing to the right</string>

    <string name="date_headline">Screentime today, February 6th</string>
    <string name="total_screentime">2h 35min</string>

    <string name="most_used_overview">Most Used</string>
    <string name="toggle_Apps">Show Apps</string>
    <string name="toggle_Categories">Show Categories</string>
    <string name="chk_incl_unused_app_check">Include unused</string>
    <string name="chk_incl_pixel_launcher">Include Pixel Launcher</string>
    <string name="btn_more">More</string>

    <string name="limits_overview">Limits</string>
    <string name="limited_to_info">Limited to %1$s Minutes</string>
    <string name="btn_edit_limits">Edit Limits</string>
    <string name="edit_limit">Edit</string>

    <!-- App Details -->
    <string name="app_details_limits_Label">Limit</string>
    <string name="no_limit">No Limit</string>
    <string name="btn_add_limit">Edit</string>
    <string name="btn_limit_reached">Notify</string>

    <!-- App Limits -->
    <string name="limits_headline"> Limits</string>
    <string name="limits_set_limit">Set Time Limit:</string>
    <string name="limits_minutes_tag">Minutes</string>

    <!-- Limit Picker Dialog -->
    <string name="btn_limit_confirm">Confirm</string>
    <string name="btn_limit_delete">Delete Limit</string>
</resources>