<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScreenTimeDiagramsActivity">

    <ScrollView
        android:id="@+id/svScreenTimeOverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalScreenTimeTodayD">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDateHeadlineD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_headline"
                tools:layout_editor_absoluteX="24dp" />

            <TextView
                android:id="@+id/tvTotalScreenTimeTodayD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_screentime"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="24dp" />

            <ToggleButton
                android:id="@+id/tglBtnCategoriesD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#455A64"
                android:textOff="@string/toggle_Categories"
                android:textOn="@string/toggle_Categories"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/tglBtnAppsD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#455A64"
                android:textOff="@string/toggle_Apps"
                android:textOn="@string/toggle_Apps"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tglBtnCategoriesD"
                app:layout_constraintEnd_toStartOf="@+id/tglBtnCategoriesD"
                app:layout_constraintTop_toTopOf="@+id/tglBtnCategoriesD" />

            <ViewFlipper
                android:id="@+id/vfRecyclerViewsD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAppUsageListD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    tools:listitem="@layout/screentime_item" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoryUsageListD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    tools:listitem="@layout/screentime_item" />

            </ViewFlipper>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>