<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScreenTimeOverviewActivity">

    <TextView
        android:id="@+id/tvDateHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_headline"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalScreenTimeToday"
        app:layout_constraintStart_toStartOf="@+id/tvTotalScreenTimeToday" />

    <TextView
        android:id="@+id/tvTotalScreenTimeToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/total_screentime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tglBtnApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_Apps"
        android:textOn="@string/toggle_Apps"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/vfRecyclerViews"
        app:layout_constraintEnd_toStartOf="@+id/tglBtnCategories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/tglBtnCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#455A64"
        android:textOff="@string/toggle_Categories"
        android:textOn="@string/toggle_Categories"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tglBtnApps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/chkUnusedApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/incl_unused_app_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ViewFlipper
        android:id="@+id/vfRecyclerViews"
        android:layout_width="410dp"
        android:layout_height="527dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="110dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAppUsageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/screentime_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoryUsageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/screentime_item" />

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>