<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:contentDescription="@string/description_app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_android"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"

            tools:text="Line 1" />

        <TextView
            android:id="@+id/tvUsageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvItemName"
            app:layout_constraintTop_toBottomOf="@+id/tvItemName"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="Line 2" />

        <TextView
            android:id="@+id/tvShowAppDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_more"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivArrowRight"
            android:contentDescription="@string/description_arrow_right"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>